Added some text information, changed some formatting.  Set up the image viewer page so that you can click previous and next.

--- a/LikeARockWindows8/LikeARock/LikeARock.csproj
+++ b/LikeARockWindows8/LikeARock/LikeARock.csproj
@@ -104,6 +104,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="DataModels\MarsImage.cs" />
+    <Compile Include="DataModels\SolAndImage.cs" />
     <Compile Include="DataModels\SolImages.cs" />
     <Compile Include="ImagePage.xaml.cs">
       <DependentUpon>ImagePage.xaml</DependentUpon>
